[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 180.0
margin/right = 263.0
margin/bottom = 194.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 221.0
margin/right = 257.0
margin/bottom = 241.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "baca nilai"
flat = false

[node name="Button 2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 260.0
margin/right = 249.0
margin/bottom = 280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "save"
flat = false

[node name="Button 3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 395.0
margin/top = 64.0
margin/right = 490.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "baca file obj"
flat = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 362.0
margin/top = 109.0
margin/right = 777.0
margin/bottom = 556.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="TextEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 583.0
margin/top = 59.0
margin/right = 723.0
margin/bottom = 84.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="FileDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 602.0
margin/top = 96.0
margin/right = 1007.0
margin/bottom = 455.0
popup/exclusive = false
window/title = "Open File(s)"
dialog/hide_on_ok = false
mode = 1
access = 0
filters = StringArray(  )
show_hidden_files = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button 2" to="." method="_on_Button_2_pressed"]

[connection signal="pressed" from="Button 3" to="." method="_on_Button_3_pressed"]

[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]


